--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ p {
 img {
     width: 100%;
     height: 80%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 ion-icon {
@@ -103,6 +103,10 @@ ion-icon {
     padding-top: 60px;
 }
 
+.product-img-container {
+    width: 60vw;
+}
+
 .product-name {
     width: 100%;
     height: 100%;
@@ -140,9 +144,13 @@ ion-icon {
     margin: -15px 0 0 0;
 }
 
+.product-info p {
+    margin: 15px 0;
+}
 
-
-
+img {
+    user-select: none;
+}
 
 
 
